Bug 1621572 - Allow adopting a frame into another debugger. r=arai

In keeping with adoptDebuggeeValue and adoptSource, this new adoptFrame
method is for use in cases where we explicitly want to create a new instance
of the Debugger type, and want to create a Frame associated with the new
Debugger that corresponds to the same Frame in the existing Debugger.

Differential Revision: https://phabricator.services.mozilla.com/D67109